# dotchk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TIMEOUT_ANALYSIS.md  TLD_SUMMARY.md  install.ps1  install.sh  run-docs.sh  rustfmt.toml  uninstall.sh
.github/workflows/: ci.yml  site.yml
benches/: batch_performance.rs  dns_improvements.rs  throughput.rs
docs/: ai-guide.md
examples/: README.md  brand-search.sh  competitive-analysis.sh  find-short-domains.sh  monitor-domain.sh  startup-name-generator.sh
scripts/: README.md  sync-docs.sh  update_tlds.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME  manifest.json
site/src/components/: CodeBlock.astro  CommandBlock.astro  Commands.astro  CopyButton.astro  Examples.astro  Hero.astro  Installation.astro  OutputBlock.astro  Performance.astro  QuickStart.astro  SingleCommandBlock.astro
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
src/: checker.rs  dns_batch.rs  dns_pipelined.rs  domain.rs  export.rs  lib.rs  main.rs  pattern.rs  tld.rs  tld.rs.backup  tld_registry.rs
src/cli/: bulk.rs  check.rs  mod.rs  output.rs  pattern.rs  tld.rs  utils.rs
tests/: integration_test.rs
