[package]
name = "dotchk"
version = "1.4.1"
edition = "2021"
authors = ["Ben Aiad"]
description = "High-performance domain availability checker"
license = "GPL-3.0"
repository = "https://github.com/dotchk/dotchk"
homepage = "https://dotchk.org"
documentation = "https://dotchk.org"
readme = "README.md"
keywords = ["domain", "dns", "availability", "checker", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "dotchk"
path = "src/main.rs"

[lib]
name = "dotchk"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
phf = { version = "0.12", features = ["macros"] }
dashmap = "6"
regex = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
lazy_static = "1.5"
colored = "3.0.0"
indicatif = "0.18.0"
once_cell = "1.19"
resolv-conf = { version = "0.7", features = ["system"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true