[package]
name = "dotchk"
version = "1.4.2"
edition = "2024"
authors = ["Ben Aiad"]
description = "High-performance domain availability checker"
license = "GPL-3.0"
repository = "https://github.com/dotchk/dotchk"
homepage = "https://dotchk.org"
documentation = "https://dotchk.org"
readme = "README.md"
keywords = ["domain", "dns", "availability", "checker", "cli"]
categories = ["command-line-utilities", "network-programming"]

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "dotchk"
path = "src/main.rs"

[lib]
name = "dotchk"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync", "fs"] }
clap = { version = "4", features = ["derive"] }
phf = { version = "0.13", features = ["macros"] }
dashmap = "6"
regex = "1"
csv = "1"
thiserror = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3.0.0"
indicatif = "0.18.0"
resolv-conf = { version = "0.7", features = ["system"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true